[package]
name = "bart_info"
version = "1.0.2"
authors = ["Ebrahim Azarisooreh <ebrahim.azarisooreh@gmail.com>"]
edition = "2018"

[dependencies]
alexa_sdk = "0.1.4"
lambda_runtime = "0.2.0"
reqwest = "0.9.16"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
lazy_static = "1.3.0"
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"
simple_logger = "1.2.0"
log = "0.4.5"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]